--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
     <div class = "left column">
         <h1>BEST DESIGNED WEBSITES EVER:</h1>
         <p><a href="https://www.spacejam.com/">the space jam website and literally nothing else</a></p>
+        <h1>OH NO WAIT HOLD ON A SECOND I ACTUALLY FORGOT</h1>
+        <p><strong>THERE'S ALSO THAT WEBSITE CALLED "thisisafuckingwebsite" OR SOMETHING AND I CAN'T REMEMBER WHAT IT'S CALLED OFF THE TOP OF MY HEAD BUT IT USES NO CSS AND ONLY SEMANTIC TAGS AND I LOVE IT</strong></p>
+        <p>HEY GUESS WHAT I FOUND IT <a href="https://motherfuckingwebsite.com/">HERE YOU GOOOOO~~ AMEX HAS BLOCKED THE GOD DAMN WEBSITE ON THEIR NETWORK BUT THE SOUL OF THE PROLETARIAT LIVES ON</a></p>
     </div>
 
     <div class = "right column">
