--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="funkystuff.css">
     <script src="code.js"></script>
+    <link rel="icon" href="blobcat.png">
 </head>
 <body>
 
