--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>morgan mars said trans rights</title>
     <link rel="stylesheet" type="text/css" href="funkystuff.css">
     <script src="code.js"></script>
     <link rel="icon" href="blobcat.png">
