added some more important sexy numbers

--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
             <li><a href ="#">0828</a></li>
             <li><a href ="#">0596</a></li>
             <li><a href ="#">0006</a></li>
+            <li><a href= "#">7442</a></li>
             <li><a href ="#" onclick="secretButton()">5890</a></li>
             <li><a href ="#">1211</a></li>
             <li><a href ="#">10121</a></li>
+            <li><a href ="#">3958</a></li>
+            <li><a href ="#">4729</a></li>
+            <li><a href ="#">4189</a></li>
         </ul>
     </nav>
 </header>
