revamped the entire dealio

--- a/drones.html
+++ b/drones.html
@@ -15,20 +15,23 @@
     </div>
 
     <div class = body-container>
-        <h1 class = "trans title"> hewwo! </h1>
-
+        <h1 class = "trans title"> Drones!! </h1>
         <div class="row">
-            <div class = "cis text-container">
-                <p>wewcome to mwy wittwe homepage. dis website was mwade to show off how good i am at css and htmw uwu</p>
-                <p>i sincewewy hope chu enjoy dis wittwe touw of mwy own pewsonaw wowwd</p>
-                <p>use the winks in the navigation baw above to find youw way awound!! OwO</p>
+            <img class="trans small-image" src="images/drone.jpg" alt = "A good li'l beeper.">
+            <div class="trans text-container">
+                <h1>I like drones!</h1>
+                <p>They're cute!</p>
+                <p>Cuuuuute!!!!</p>
             </div>
         </div>
 
-    </div>
-
-    <div id="replace-footer">
-        <script>loadComponent('footer');</script>
+        <div class="trans row">
+            <div class="text-container">
+            <h1>I love drones so much wow!</h1>
+            <p>I have literally no information about them to put here! I just think they're neat!</p>
+            </div>
+        </div>
+        
     </div>
 
 </body>
