added two guys on the moon

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 <p>wewcome to mwy wittwe homepage. dis website was mwade to show off how good i am at css and htmw uwu</p>
                 <p>i sincewewy hope chu enjoy dis wittwe touw of mwy own pewsonaw wowwd</p>
                 <p>use the winks in the navigation baw above to find youw way awound!! OwO</p>
+                <hr>
+                <p>if two guys wewe on the moon and one kiwwed the othew with a wock wouwd that be fucked up ow what owo</p>
             </div>
         </div>
 
