added some more complaining to the music page

--- a/music.html
+++ b/music.html
@@ -64,6 +64,9 @@
                     despite being credited, I didn't gain any new listeners or fans from this promotion and I continued as a poor starving artist. <em>Until!</em></p>
                 <p>On December of that same year, on my 18th birthday no less, I was contacted yet again by the brave indie developer asking if my music could comprise the games soundtrack! To which I said! "Yes!! Wow!!! Yes please!"
                 I was paid £400 for 19 tracks in total, which for a fuckabout college kid who's not <em>especially</em> good at music, is pretty motherfucking awesomesauce. </p>
+                <p>Oh, and I absolutely procrastinated the fuck out of this. I was very much rushing to meet deadlines by the end 'cause I'd ended up putting it off for months. Haha, whoops!
+                    And to make matters fucking worse, the college cloud storage drive that I had ALL my music files on got FUCKING WIPED by <em>DIPSHIT FUCKHEAD</em> IT techs. I had only the renders I'd uploaded to Soundcloud and Clyp to use, which
+                resulted in a lot of the final songs having a spliced, sampled, hip-hop-y vibe to them.</p>
             </div>
         </div>
 
