Added some more songs from vol 5.5, 5, and 4

--- a/music.html
+++ b/music.html
@@ -23,18 +23,18 @@
         <div id="musicplayer-container" style="padding:30px">
             <div id="musicplayer-controls">
                 <button id="musicplayer-deincrement" onclick="changeMusic(-1)" class="cis button" disabled style="padding: 10px">Previous</button>
-                <img id="musicplayer-art" alt="Album art" src="images/album/vol7.jpg" class="trans album-art">
+                <img id="musicplayer-art" alt="Album art" src="images/album/vol5.png" class="trans album-art">
                 <button id="musicplayer-increment" onclick="changeMusic(1)" class="trans button" style="padding: 10px">Next</button>
             </div>
             <div id="musicplayer-information" style="text-align: center; padding: 30px">
                 <audio id="musicplayer-player" controls="controls">
-                    <source id="musicplayer-source" src="audio/auffytune.mp3" >
+                    <source id="musicplayer-source" src="audio/Annabelle-Sunray's-Subconsciousness.mp3" >
                 </audio>
                 <br>
                 <br>
                 <div class="cis title">
-                    <p id="musicplayer-title">Auffytune</p>
-                    <p id="musicplayer-album">mysticToaster Vol. 7</p>
+                    <p id="musicplayer-title">Annabelle Sunray's Subconsciousness</p>
+                    <p id="musicplayer-album">mysticToaster Vol. 5</p>
                 </div>
             </div>
         </div>
