Added a brief explaination for this bullshit

--- a/music.html
+++ b/music.html
@@ -39,7 +39,17 @@
             </div>
         </div>
 
-        <h1 class = "trans title"> Some other stuff I've worked on! </h1>
+        <h1 class = "trans title"> Some stuff I've worked on! </h1>
+
+        <div class="trans row" style="background-color: white !important">
+            <img class="mysticToaster" src="images/mysticToaster.jpg">
+            <div class="text-container" style="max-width: 600px">
+                <h1>Wow! I make music!</h1>
+                <p>Not much to say here! I started in high school, hence my stupid fucking pseudonym, and I make music because it's fun!</p>
+                <p>I used to upload my music on Soundcloud and Clyp, but don't anymore. I do, however, still have a <a href="https://mystictoaster.bandcamp.com">Bandcamp</a> where I've released my albums over the years. Please don't look at my first three albums 'cause they're mad cringe.</p>
+                <p>I currently have unreleased 4 albums (volumes 6, 7, 8, and 9, previewed in brief above) which I <em>promise</em> I'll totally put out <em>soon.</em></p>
+            </div>
+        </div>
 
         <div class="trans row">
             <img class="album-art" src="images/modifiedpixels.jpg" alt="Modified Pixels album art"/>
