aaaa fuckin whatever

--- a/music.html
+++ b/music.html
@@ -60,7 +60,7 @@
                 It was really fuckin' sick-nasty to be able to produce a phat beat that someone else rapped over.</p>
                 <p>I remember there being a ton of delay with this project. I think I was involved for over a year before it actually came out.
                 I was originally scoped for the project after I posted a shitty ironic Undertale vaportrap remix on Soundcloud to which Screwheili commented something to the effect of "oh yeah, that's the real shit mang"</p>
-                <p>To which I replied, "Thanks, you can fuck my wife anytime." T'was a beautiful collaborative relationship from then on.</p>
+                <p>To which I replied, "Thanks, you can fuck my wife anytime."</p>
             </div>
         </div>
 
@@ -70,7 +70,7 @@
                 <h1><a href="https://store.steampowered.com/app/726110/Overcrowd_A_Commute_Em_Up/">Overcrowd: A Commute 'Em Up</a></h1>
                 <p>Overcrowd is a game that many, I'm told, really really enjoy- and I made some of the music for it. Talk about being a part of history.</p>
                 <p>I was asked in fuckin' <em>uhhhhhhhhhhhhhhhhh</em> April 2018 If one of my songs could be used in the trailer for the Official™ Overcrowd™ Steam™ Greenlight Trailer™™™™.
-                    To which I was all like "oh, yeah, sure." Thich was all well and good and sexy, but
+                    To which I was all like "oh, yeah, sure." Which was all well and good and sexy, but
                     despite being credited, I didn't gain any new listeners or fans from this promotion and I continued as a poor starving artist. <em>Until!</em></p>
                 <p>On December of that same year, on my 18th birthday no less, I was contacted yet again by the brave indie developer asking if my music could comprise the games soundtrack! To which I said! "Yes!! Wow!!! Yes please!"
                 I was paid £400 for 19 tracks in total, which for a fuckabout college kid who's not <em>especially</em> good at music, is pretty motherfucking awesomesauce. </p>
