Added sass to my project ayyyyyy

--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
             </div>
         </div>
 
-    </div>
+        <div class="row">
+            <div class = "cis text-container">
+                <p class = "device-detector">Hello </p>
+            </div>
+        </div>
 
-    <div id="replace-footer">
-        <script>loadComponent('footer');</script>
     </div>
 
 </body>
